[package]
name = "cimfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Security_Authorization",
    "Win32_System_Rpc",
] }
cimfs-sys = { path = "../cimfs-sys" }
tokio = "1.28.2"
bytes = "1.4.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
clap = { version = "4.3.2", features = ["derive"] }
tracing-test = "0.2.4"
